# Ejercicios_Modulo2

./: Ejercicio_1.py  Ejercicio_10.py  Ejercicio_11.py  Ejercicio_12.py  Ejercicio_13.py  Ejercicio_14.py  Ejercicio_15.py  Ejercicio_2.py  Ejercicio_3.py  Ejercicio_4.py  Ejercicio_5.py  Ejercicio_6.py  Ejercicio_7.py  Ejercicio_8.py  Ejercicio_9.py  main.py  pyproject.toml
tests/: test_Ejercicio_1.py  test_Ejercicio_10.py  test_Ejercicio_11.py  test_Ejercicio_12.py  test_Ejercicio_13.py  test_Ejercicio_14.py  test_Ejercicio_15.py  test_Ejercicio_2.py  test_Ejercicio_3.py  test_Ejercicio_4.py  test_Ejercicio_5.py  test_Ejercicio_6.py  test_Ejercicio_7.py  test_Ejercicio_8.py  test_Ejercicio_9.py
